[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Viewport_main" type="Control" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug_panel_left" type="Control" parent="Viewport_main"]
anchor_bottom = 1.0
margin_right = 192.0
margin_bottom = -88.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="_ColorRect" type="ColorRect" parent="Viewport_main/Debug_panel_left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.443137, 0.588235, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_x" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_right = 75.0
margin_bottom = 14.0
text = "Camera x: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_y" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_top = 16.0
margin_right = 75.0
margin_bottom = 30.0
text = "Camera y: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_zoom" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_top = 32.0
margin_right = 103.0
margin_bottom = 46.0
text = "Current zoom: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse_x" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_top = 48.0
margin_right = 75.0
margin_bottom = 62.0
text = "Mouse x: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse_y" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_top = 64.0
margin_right = 75.0
margin_bottom = 78.0
text = "Mouse y: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Viewport_main/Debug_panel_left"]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 94.0
text = "FPS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="Control" parent="Viewport_main"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_bottom = -88.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="_ColorRect" type="ColorRect" parent="Viewport_main/Intro"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.529412, 0.258824, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Viewport_main/Intro"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Left click and drag - rotate.
Mouse wheel - zoom in/out.
Escape - quit."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onscreen_controls" type="Control" parent="."]
material = SubResource( 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
mouse_filter = 1
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Onscreen_controls"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Onscreen_controls"]
margin_top = 1.04904e-05
margin_right = 85.0
margin_bottom = 14.0
text = "Control panel"

[node name="Button_turret" type="Button" parent="Onscreen_controls"]
margin_left = 8.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
toggle_mode = true
text = "Turret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_engine" type="Button" parent="Onscreen_controls"]
margin_left = 8.0
margin_top = 56.0
margin_right = 64.0
margin_bottom = 76.0
toggle_mode = true
text = "Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Viewport_main" to="." method="_on_Viewport_main_mouse_entered"]
[connection signal="mouse_exited" from="Viewport_main" to="." method="_on_Viewport_main_mouse_exited"]
[connection signal="resized" from="Viewport_main" to="." method="_on_Viewport_main_resized"]
